Feat: novos tutoriais.

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -1,7 +1,12 @@
 ---
-title: Markdown page example
+title: Introdução.
+description: Documento inicial.
+sidebar_position: 1
+slug: /
 ---
 
-# Markdown page example
+# Introdução
 
-You don't need React to write simple standalone pages.
+#### Essa e a pagina inicial da documentação use o sidebar ao lado para ver os projetos ou tutoriais!
+
+
