Feat: novos docs e correção de alguns detalhes.

--- a/docs/CyberOps/TorGateway-Kali.mdx
+++ b/docs/CyberOps/TorGateway-Kali.mdx
@@ -37,6 +37,13 @@ Exemplo de configuração:
 
 ![Untitled](img/Untitled.png)
 
+##### address 10.152.152.11
+##### importante! netmask 255.255.192.0
+##### network 10.152.152.0
+##### broadcast 10.152.191.255
+##### importante! gateway 10.152.152.10
+##### dns-nameservers 10.152.152.0
+
 - O Whonix Gateway pode ser usado com qualquer sistema operacional rodando na VM, o Kali linux so foi usado de exemplo.
 
 ### E importante deixar a VM do Whonix Gateway executando para deixar o IP do kali anonimo!
