Adicionado uma descrição na doc do Rasp Display e adicionado mais uma doc.

--- a/docs/Raspberry/raspberryDisplay.mdx
+++ b/docs/Raspberry/raspberryDisplay.mdx
@@ -8,6 +8,10 @@ Obs: O display usado e um display i2c gererico.
 
 ---
 
+E apenas um tutorial de um codigo simples em python para mostrar o status do RaspberryPi.
+
+Status como, consumo de memoria RAM, consumo do HD, uso do processador e etc..
+
 ### Comandos para instalação do software do display.
 
 Sistema usado: Raspberry Pi OS Bulleye (A dist Linux oficial do Raspberry)
